@@ -1,17 +1,10 @@
 {
-  "timestamp" : "2022-04-14T08:13:03Z",
-  "count_outdated" : 825,
-  "uniques_outdated" : 44,
-  "count" : 981,
+  "timestamp" : "2022-04-14T16:09:35Z",
+  "count_outdated" : 841,
+  "uniques_outdated" : 45,
+  "count" : 993,
   "uniques" : 59,
   "views" : [
-    {
-      "timestamp": "2022-03-31T00:00:00Z",
-      "count": 4,
-      "count_minmax": [ 0, 16 ],
-      "uniques": 1,
-      "uniques_minmax": [ 0, 1 ]
-    },
     {
       "timestamp": "2022-04-01T00:00:00Z",
       "count": 29,
