@@ -1,12 +1,7 @@
 {
-  "count": 156,
+  "count": 152,
   "uniques": 2,
   "views": [
-    {
-      "timestamp": "2022-03-31T00:00:00Z",
-      "count": 4,
-      "uniques": 1
-    },
     {
       "timestamp": "2022-04-01T00:00:00Z",
       "count": 29,
